tests/baselines/reference/mergedModuleDeclarationCodeGen4.errors.txt
mergedModuleDeclarationCodeGen4.ts(3,16): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
mergedModuleDeclarationCodeGen4.ts(3,26): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
mergedModuleDeclarationCodeGen4.ts(8,16): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
mergedModuleDeclarationCodeGen4.ts(8,26): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.


==== mergedModuleDeclarationCodeGen4.ts (4 errors) ====
    namespace superContain {
        export namespace contain {
            export module my.buz {
                   ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
                             ~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
                export namespace data {
                    export function foo() { }
                }
            }
            export module my.buz {
                   ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
                             ~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
                export namespace data {
                    export function bar(contain, my, buz, data) {
                        foo();
                    }
                }
            }
        }
    }